--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
 body {
-    margin: 0 auto;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    position: relative;
+  margin: 0 auto;
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: normal;
+  position: relative;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 
 .p-t {
-    padding-top: 78px;
+  padding-top: 78px;
 }
